--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ body {
 p{
     color:red;
 }
+
+body {
+    color: white;
+    background-color: #333;
+    font-size: 150%;
+    font-family: 'Satisfy', cursive;
+    margin: 5em 25%;
+  }
